--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,6 @@
 <h1>Timeline Creator</h1>
+
+
+<%= link_to 'People', people_path %>
+<%= link_to 'Times', relative_time_spaces_path %>
+<%= link_to 'Events', events_path %>
