--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,3 +4,5 @@
 <%= link_to 'People', people_path %>
 <%= link_to 'Times', relative_time_spaces_path %>
 <%= link_to 'Events', events_path %>
+
+<%= link_to 'Celestial Bodies', celestial_bodies_path %>
